# a2fuse

./: Cargo.toml  LICENSE  README.md  boot.pi
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: README.md  design.md  prodos-format.md  prodos-references.md  roadmap.md
docs/development/: contributing.md
scripts/: ci-checks.sh  install-git-hooks.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/fuse/: attrs.rs  fs.rs  inode.rs  mod.rs
src/prodos/: applesoft.rs  block.rs  directory.rs  file.rs  mod.rs  path.rs  system_image.rs  types.rs  volume.rs  writer.rs
testdata/: README.md
testdata/applesoft/: compact_keywords.bas  hello_loop.bas  rem_and_strings.bas
tests/: cli_tests.rs  prodos_applesoft_tests.rs  prodos_block_tests.rs  prodos_directory_tests.rs  prodos_path_tests.rs  prodos_writer_tests.rs
