[package]
name = "a2fuse"
version = "0.1.2"
edition = "2024"
description = "Mount and maintain Apple II ProDOS disk images"
license = "MIT"
repository = "https://github.com/markassad/a2fuse"

[features]
default = []
macfuse = ["dep:fuser", "dep:libc"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
fuser = { version = "0.17", optional = true, features = ["macfuse-4-compat"] }
libc = { version = "0.2", optional = true }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
